some improvements and do TODO